--- a/santiago_papeleria_frontend/src/app/pages/product/components/product-image-gallery/product-image-gallery.html
+++ b/santiago_papeleria_frontend/src/app/pages/product/components/product-image-gallery/product-image-gallery.html
@@ -1,9 +1,9 @@
-<div class="space-y-4">
+<div class="space-y-3">
     <!-- Main Image -->
-    <div class="bg-white rounded-2xl overflow-hidden border border-gray-100 relative group cursor-zoom-in"
+    <div class="bg-white rounded-xl overflow-hidden border border-gray-100 relative group cursor-zoom-in"
         (click)="openLightbox(selectedIndex)">
         <img [src]="images[selectedIndex]" [alt]="productName"
-            class="w-full h-96 lg:h-[32rem] object-contain p-4 transition-transform duration-300 group-hover:scale-105" />
+            class="w-full h-64 lg:h-80 object-contain p-3 transition-transform duration-300 group-hover:scale-105" />
         <div
             class="absolute inset-0 bg-black/0 group-hover:bg-black/5 transition-colors flex items-center justify-center">
             <i
